--- a/account-service/src/main/resources/application-dev.properties
+++ b/account-service/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@ spring.application.name=movement-service
 #Server
 server.port=8082
 #Datasource
-spring.datasource.url=jdbc:mysql://mysql:3306/account_db?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/account_db?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -13,7 +13,7 @@ spring.flyway.enabled=true
 spring.flyway.table=schema_version
 spring.flyway.validate-on-migrate=true
 #RabbitMQ
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
@@ -21,4 +21,4 @@ spring.rabbitmq.template.exchange=customer.exchange
 spring.rabbitmq.template.default-receive-queue=customer.queue
 spring.rabbitmq.template.routing-key.customer-created=customer.created
 #Customer service url
-customer.service.url=http://customer-service:8080
+customer.service.url=http://localhost:8080
