--- a/customer-service/src/main/resources/application-dev.properties
+++ b/customer-service/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-spring.application.name=movement-service
+spring.application.name=customer-service
 #Server
-server.port=8082
+server.port=8080
 #Datasource
-spring.datasource.url=jdbc:mysql://mysql:3306/account_db?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/customer_db?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -13,12 +13,10 @@ spring.flyway.enabled=true
 spring.flyway.table=schema_version
 spring.flyway.validate-on-migrate=true
 #RabbitMQ
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.template.exchange=customer.exchange
 spring.rabbitmq.template.default-receive-queue=customer.queue
 spring.rabbitmq.template.routing-key.customer-created=customer.created
-#Customer service url
-customer.service.url=http://customer-service:8080
