--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=customer-service
 #Server
 server.port=8080
 #Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/customer_db?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://mysql:3306/customer_db?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=toor
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -13,7 +13,7 @@ spring.flyway.enabled=true
 spring.flyway.table=schema_version
 spring.flyway.validate-on-migrate=true
 #RabbitMQ
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
